sheep-dog-dev-svc/kubernetes/overlays/failsafe/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sheep-dog-dev-ingress
spec:
  rules:
    - host: dev.sheepdogdev.io
      http:
        paths:
          - path: "/sheep-dog-dev-svc"
            pathType: Prefix
            backend:
              service:
                name: sheep-dog-dev-svc
                port:
                  number: 80
